2007-01-02  Ted Bullock <tbullock@canada.com>

	*License: Included openssl linking exception

2006-12-08  Ted Bullock <tbullock@canada.com>
	
	* Bug Fixes: Added a number of fixes from the mailing lists
	over the last 6 years.

	* compiler warnings: Compiler warnings in core.c and wsesslog.c
	
	* configuration: Fixes a problem with the "configure" setup
	where the "--prefix=" option wasn't being obeyed

	* zero length: Fixes bug in http.c (parse_header)with zero
	length content

	* Host Header: Identify machine by FQD rather than hostname

	* Persistent Connections: Added Persistent connections to HTTP 1.0
	requests

	* Robust alloca.h: Robust way to handle the header file that
	defines the alloca function <alloca.h> for linux and stdlib.h for
	BSD and others

	* Time Discrepancy: Fixed a discrepancy between the data produced
	by httperf and the documentation in regards to timing.

	* wsesslog Crash: Fixed a problem with the wsesslog crashing
	httperf due to an unhandled session failure from a burdened server

2000-10-31  David Mosberger  <davidm@hpl.hp.com>

	* Version 0.8 released.

	* core.c (do_recv) [!HAVE_SSL]: Avoid referncing param.use_ssl.
	(do_send): Ditto.

	* core.c (core_ssl_connect): Print error message if SSL connect
	fails.  ERR_print_errors_fp() may not print anything if there
	error is due to, e.g., trying to connect to a non-existent port.

	* httperf.c (main): Initialize port to -1.  Once parameters have
	been processed, port defaults to 443 if SSL is in use, 80
	otherwise.

2000-10-30  David Mosberger  <davidm@hpl.hp.com>

	* httperf.man: Update man-page with new options (based on Martin's
	descriptions.

	* httperf.c (usage): Mention --port.

2000-10-27  David Mosberger  <davidm@hpl.hp.com>

	* httperf.man: Mention request summary in description of
	--print-request.

	* stat/print_reply.c (print_request): Print request header/content
	summary line.

	* httperf.c (usage): Bring in sync with implemented options
	(Martin's patch).