@@ -1,3 +1,11 @@
+2007-01-16  Ted Bullock <tbullock@canada.com>
+	* Build System: Updated build system to a more typical directory
+	layout and wrote missing makefile.am files for automake
+
+	* idleconn: Now installed along with the httperf executable
+
+	* ttest: Remove program from build
+
 2007-01-02  Ted Bullock <tbullock@canada.com>
 
 	*License: Included openssl linking exception
